--- a/SimonLarochelle.html
+++ b/SimonLarochelle.html
@@ -6,7 +6,7 @@
     <style>
 
         body{
-            background: #fcec93;
+            background: white;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             padding: 0 40px;
         }
@@ -17,13 +17,33 @@
 
             h1 {
                 font-size: 50px;
+                text-align: left;
+                margin: 10px;
             }
+
+            h2{
+                text-transform: uppercase;
+            }
+
+        img{
+            background: greenyellow;
+            padding: 30px;
+            margin: 10px 30px;
+        }
+
+        hr{
+            margin: 20px;
+            color: greenyellow;
+            height: 3px;
+            background: greenyellow;
+            border: none;
+        }
 
     </style>
 </head>
 <body>
 
-    <img src="images/me.jpeg" alt="" style="float: right; padding: 15px 30px; max-width: 40%; max-height: 1000px">
+    <img src="images/me.jpeg" alt="" style="float: left; max-width: 40%; max-height: 1000px">
 
     <h1>Hey 👋🏻 <br>moi c'est Simon!</h1>
 
@@ -57,7 +77,7 @@
 
     <h2>Expériences professionnelles</h2>
         <h3>Superviseur pour Starbucks Canada</h3>
-        <h5>2018 - Présent</h5>
+        <h4>2018 - Présent</h4>
         <ul>
             <li>Gestion des fonds</li>
             <li>Mener une équipe à ateindre les objectifs</li>
@@ -65,7 +85,7 @@
         </ul>
 
         <h3>Homme-à-tout-faire pour Locadent Inc.</h3>
-        <h5>2017 - Présent</h5>
+        <h4>2017 - Présent</h4>
         <ul>
             <li>Tâches de maintenance</li>
             <li>Support informatique</li>
@@ -74,6 +94,7 @@
     <hr>
 
     <h2>Loisirs et intérêts</h2>
-
+        <h3>Informatique</h3>
+        <h3>Nature</h3>
 </body>
 </html>
