Oct 5 - 4:26p - Removing <style> in header - Adding of deprecated <font> and attributes to body - Removal lang=fr

--- a/SimonLarochelle.html
+++ b/SimonLarochelle.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Simon Larochelle</title>
-    <style>
+    <!--<style>
 
         body{
             background: linear-gradient(#e2f4fb, #96d9f0);
@@ -91,27 +91,33 @@
             float: left;
         }
 
-    </style>
+    </style>-->
 </head>
-<body>
+<body style="background: linear-gradient(#e2f4fb, #96d9f0); padding: 0 40px; max-width: 900px; margin: 0 auto;" link="black" >
+    <font face="Helvetica Neue, Helvetica, sans-serif">
+    <img src="images/me.png" alt="animoji de Simon Larochelle faisiant un signe de paix." style="height: 250px">
 
-    <img src="images/me.png" alt="" style="height: 250px">
+    <font face="Futura, Arial Black, sans-serif">
+        <h1 class="main-titre">Simon Larochelle</h1>
+    </font>
 
-    <h1 class="main-titre">Simon Larochelle</h1>
-
-    <ul class="navigation">
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#competences">Compétences</a></li>
-        <li><a href="#education">Éducation</a></li>
-        <li><a href="#experiences">Expériences</a></li>
-        <li><a href="#interets">Intérêts</a></li>
-    </ul>
+    <font face="monospace">
+        <ul class="navigation" style="display: flex; padding: 10px 0; margin: 0;">
+            <li style="list-style: none; padding: 0 10px"><a href="#contact">Contact</a></li>
+            <li style="list-style: none; padding: 0 10px"><a href="#competences">Compétences</a></li>
+            <li style="list-style: none; padding: 0 10px"><a href="#education">Éducation</a></li>
+            <li style="list-style: none; padding: 0 10px"><a href="#experiences">Expériences</a></li>
+            <li style="list-style: none; padding: 0 10px"><a href="#interets">Intérêts</a></li>
+        </ul>
+    </font>
 
     <p>Simon <i>(moi)</i>, c'est le meilleur<sup>1</sup>! Avec des années d'expériences en multimédia, en gestion d'équipe et en consommation de café, je suis prêt à tout affronté.</p>
 
     <p><sup>1</sup>selon ma grand-mère</p>
 
-    <h2 id="contact">Infos de contact</h2>
+    <font face="Futura, Arial Black, sans-serif">
+        <h2 id="contact">Infos de contact</h2>
+    </font>
 
     <p><b>Addresse</b>: 1234, Av du College, Montréal, QC</p>
     <p><b>Téléphone</b>: (514) 123-4567</p>
@@ -120,9 +126,11 @@
     <p><b>Site web</b>: <a href="http://slarochelle.com" target="_blank">slarochelle.com</a></p>
     <p><b>Anniversaire</b>: 26 Juin 🎈</p>
 
-    <hr>
+    <hr width="70%" align="left" noshade="">
 
-    <h2 id="competences">Compétences</h2>
+    <font face="Futura, Arial Black, sans-serif">
+        <h2 id="competences">Compétences</h2>
+    </font>
         <h3>Web</h3>
             <ul class="liste-competence">
                 <li>HTML</li>
@@ -142,7 +150,7 @@
                 <li>C++</li>
             </ul>
 
-    <hr>
+    <hr width="70%" align="left" noshade="">
 
     <h2 id="experiences">Expériences professionnelles</h2>
     <h3>Superviseur pour Starbucks Canada</h3>
@@ -161,8 +169,7 @@
         <li>Support informatique</li>
     </ul>
 
-
-    <hr>
+    <hr width="70%" align="left" noshade="">
 
     <h2 id="education">Éducation</h2>
     <h3>Collégial</h3>
@@ -180,7 +187,7 @@
             <h5>2012 - 2017</h5>
             <p>Programme d'Étude Internationalle, Diplome du BI obtenu</p>
 
-    <hr>
+    <hr width="70%" align="left" noshade="">
 
     <h2 id="interets">Loisirs et intérêts</h2>
 
@@ -188,8 +195,10 @@
     <p>Depuis que je suis tout petit, je m'intéresse beaucoup à tout ce qui touche l'informatique. Mon père m'y a introduit j'avais à peine 3-4 ans, et c'est depuis rester mon hobbie préféré.</p>
     <p>Je m'intéresse particulièrement à ce qui est <i>retro</i>, j'ai une petite collection personnelle de PCs du début des années 2000 que j'aime bien explorer et utiliser pour jouer à de vieux jeux sur CD. (Notamment SimCity 3000)</p>
 
-    <img src="images/me.jpeg" alt="photo de moi en face de l'océan" height="500px" class="content">
-    <h3>Voyager</h3>
+    <img src="images/me.jpeg" alt="photo de moi en face de l'océan" height="500px">
+    <p>^ Photo de moi au <i>Acadia National Park</i>, Maine, 2022</p>
+
+        <h3>Voyager</h3>
     <p>J'ai l'énorme chance d'avoir beaucoup voyagé, grâce à ma grand-mère qui adore m'ammener avec elle lors de ces périples autour du monde.</p>
     <h6><u>Top 3 destinations</u></h6>
     <ol>
@@ -197,19 +206,19 @@
         <li>Australie</li>
         <li>Norvège</li>
     </ol>
-    <p><- Photo de moi au <i>Acadia National Park</i>, Maine, 2022</p>
+
 
     <h3>Nature</h3>
     <p>S'entourer de nature et de plante est quelque chose de très important pour moi, si seulement parce que c'est magnifique. J'ai habité plusieurs années dans la fôret en grandissant, ce qui à
     beaucoup encourager cet amour pour la nature. Maintenant que j'habite en ville, je remplis mon apart de plante, pour essayer de re-créer un peu de fôret chez moi.</p>
 
-    <hr>
+    <hr width="70%" align="left" noshade="">
 
     <p>Merci d'avoir pris le temps de faire un peu connaissance! À bientôt!
     </p>
 
 
 
-
+    </font>
 </body>
 </html>
